--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,22 @@ code {
   min-height: calc(100vh - 70px - 64px);
   padding: 1.5rem 0;
 }
+
 .nav-mobile-link {
   padding: 0 1rem;
+}
+
+.category-list, .meal-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 1rem;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-content {
+    flex-grow: 1;
 }
